--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-bootsplash": "^4.1.4",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.3.0",
     "react-redux": "^8.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
@@ -38,6 +39,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
