--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-native": "0.68.1",
     "react-native-bootsplash": "^4.1.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-redux": "^8.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
