--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-bootsplash": "^4.1.4",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^5.4.15",
