--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-bootsplash": "^4.1.4",
