--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-sound-player": "^0.12.0",
     "react-native-svg": "^12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-redux": "^8.0.1",
