--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@reduxjs/toolkit": "^1.8.1",
-    "axios": "^0.27.2",
+    "axios": "0.24.0",
     "jwt-decode": "^3.1.2",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-image-picker": "^4.8.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^5.4.15",
     "react-native-safe-area-context": "^4.2.4",
