--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-bootsplash": "^4.1.4",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-image-crop-tools": "^1.6.2",
     "react-native-image-picker": "^4.8.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^5.4.15",
